style.css
@font-face { font-family: RomanSerif; src: url('fonts/RomanSerif.ttf'); }
@font-face { font-family: RomanSerif; font-style: oblique; src: url('fonts/RomanSerif-Oblique.ttf'); }

body {
  font-family: RomanSerif, serif;
  /*font-style: oblique;*/
  background-color: #050508;
  color: white;
  width: 100%;
  height: 100%;
  margin: 0;
  top: 0;
}

#wrapper {
  position: relative;
  height: 100%;
  margin-left: 25px;
  margin-right: 25px;
}

.row {
  overflow: hidden;
}

span {
  /*background-color: #222;*/
  display: inline-block;
  padding: 0;
  margin: 0;
  font-size: 20vh;
  line-height: 20vh;
}

#info {
  position: absolute;
  bottom: 0;
  color: #fff;
}

#info > * {
  margin: 0;
  padding: 0;
}

